Prevent Wrapping

--- a/html/style.css
+++ b/html/style.css
@@ -7,6 +7,8 @@ body
 .row
 {
     padding: 0;
+    overflow-x: hidden;
+    white-space: nowrap;
 }
 
 .cell
